Problem with RecyclerView str 81 82 83

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,13 @@
         android:hint="search contacts"
         android:background="@drawable/edittextstyle"
         />
+    <TextView
+        android:id="@+id/testTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="test"
+        android:paddingTop="50dp"
+        />
 
 
     <androidx.recyclerview.widget.RecyclerView
