зкщидуь problem str 125

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -4,27 +4,32 @@
     android:layout_height="80dp"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/nameText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="18dp"
-        android:textSize="18sp"
-        android:textColor="@android:color/black"
-        tools:text="text example"
-        android:layout_alignLeft="@id/icon_phone"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="+3753320955000"
-        android:textColor="@android:color/black"
-        android:layout_alignBottom="@id/nameText"
-        android:layout_alignLeft="@id/icon_phone"/>
-        />
     <ImageView
         android:id="@+id/icon_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="15dp"
         android:src="@drawable/ic_contact_phone_black_24dp"
         />
+
+    <TextView
+        android:id="@+id/nameText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:textSize="18sp"
+        android:textColor="@android:color/black"
+        tools:text="text example"
+        android:layout_toRightOf="@id/icon_phone"/>
+    <TextView
+        android:id="@+id/number_mail_et"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        tools:text="+3753320955000"
+        android:textColor="@android:color/black"
+        android:layout_below="@id/nameText"
+        android:layout_toRightOf="@id/icon_phone"/>
+    />
+
 </RelativeLayout>
