--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,35 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
-        android:id="@+id/icon_phone"
+        android:id="@+id/icon_phone_mail"
+        android:visibility="visible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:src="@drawable/ic_contact_phone_black_24dp"
+        android:padding="5dp"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_contact_phone_blue_48dp"
         />
 
     <TextView
         android:id="@+id/nameText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:textSize="18sp"
+        android:paddingLeft="5dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="2dp"
+        android:textSize="15sp"
         android:textColor="@android:color/black"
         tools:text="text example"
-        android:layout_toRightOf="@id/icon_phone"/>
+        android:layout_toRightOf="@id/icon_phone_mail"/>
     <TextView
         android:id="@+id/number_mail_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:paddingLeft="5dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="5dp"
+        android:textSize="15sp"
         tools:text="+3753320955000"
         android:textColor="@android:color/black"
         android:layout_below="@id/nameText"
-        android:layout_toRightOf="@id/icon_phone"/>
+        android:layout_toRightOf="@id/icon_phone_mail"/>
     />
 
 </RelativeLayout>
