send data to EditRemoveActivity is OK

--- a/app/src/main/res/layout/activity_edit_remove.xml
+++ b/app/src/main/res/layout/activity_edit_remove.xml
@@ -16,6 +16,29 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.AppCompatRadioButton
+            android:id="@+id/radioButtonPhone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Phone number"
+            android:checked="false"
+
+            />
+
+        <androidx.appcompat.widget.AppCompatRadioButton
+            android:id="@+id/radioButtonMail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Email"
+            android:checked="true"
+            />
+    </RadioGroup>
+
     <EditText
         android:id="@+id/name_et"
         android:layout_width="match_parent"
