--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -37,6 +37,12 @@
         android:textColor="@android:color/black"
         android:layout_below="@id/nameText"
         android:layout_toRightOf="@id/icon_phone_mail"/>
+    <Button
+        android:id="@+id/edit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:text="@string/button_edit"
     />
 
 </RelativeLayout>
